RESOLVED FIXED193402
Fix all CLoop JSC test failures (including some LLInt bugs due to recent bytecode format change).
https://bugs.webkit.org/show_bug.cgi?id=193402
Summary Fix all CLoop JSC test failures (including some LLInt bugs due to recent byte...
Mark Lam
Reported 2019-01-14 10:26:22 PST
Details to follow in patch. <rdar://problem/46012309>
Attachments
proposed patch. (51.72 KB, patch)
2019-01-14 11:31 PST, Mark Lam
keith_miller: review+
ews-watchlist: commit-queue-
Archive of layout-test-results from ews202 for win-future (13.47 MB, application/zip)
2019-01-14 13:28 PST, EWS Watchlist
no flags
Mark Lam
Comment 1 2019-01-14 11:31:29 PST
Created attachment 359057 [details] proposed patch.
Keith Miller
Comment 2 2019-01-14 12:42:41 PST
Comment on attachment 359057 [details] proposed patch. View in context: https://bugs.webkit.org/attachment.cgi?id=359057&action=review r=me. > Source/JavaScriptCore/ChangeLog:108 > + 64bit ASM LLLint (without JIT), 64bit and 32bit X86 CLoop, and ARMv7 Cloop. Nit: note this only on x86.
EWS Watchlist
Comment 3 2019-01-14 13:28:32 PST
Comment on attachment 359057 [details] proposed patch. Attachment 359057 [details] did not pass win-ews (win): Output: https://webkit-queues.webkit.org/results/10748106 New failing tests: fast/shadow-dom/shadowroot-stylesheets-wrapper-gc.html performance-api/performance-observer-no-document-leak.html js/slow-stress/simple-custom-getter.html svg/animations/smil-leak-list-property-instances.svg js/dfg-int-overflow-in-loop.html svg/animations/smil-leak-dynamically-added-element-instances.svg editing/style/apply-style-iframe-crash.html js/dom/stack-trace.html js/slow-stress/marsaglia.html fast/dom/reference-cycle-leaks.html fast/dom/Document/document-write-recursion.html js/dom/random-array-gc-stress.html webanimations/leak-document-with-web-animation.html svg/animations/smil-leak-elements.svg svg/animations/smil-leak-element-instances-noBaseValRef.svg svg/animations/smil-leak-element-instances.svg editing/style/iframe-onload-crash-mac.html
EWS Watchlist
Comment 4 2019-01-14 13:28:44 PST
Created attachment 359075 [details] Archive of layout-test-results from ews202 for win-future The attached test failures were seen while running run-webkit-tests on the win-ews. Bot: ews202 Port: win-future Platform: CYGWIN_NT-6.1-2.10.0-0.325-5-3-x86_64-64bit
Mark Lam
Comment 5 2019-01-14 13:34:22 PST
(In reply to Build Bot from comment #3) > Comment on attachment 359057 [details] > proposed patch. > > Attachment 359057 [details] did not pass win-ews (win): > Output: https://webkit-queues.webkit.org/results/10748106 > > New failing tests: > fast/shadow-dom/shadowroot-stylesheets-wrapper-gc.html > performance-api/performance-observer-no-document-leak.html > js/slow-stress/simple-custom-getter.html > svg/animations/smil-leak-list-property-instances.svg > js/dfg-int-overflow-in-loop.html > svg/animations/smil-leak-dynamically-added-element-instances.svg > editing/style/apply-style-iframe-crash.html > js/dom/stack-trace.html > js/slow-stress/marsaglia.html > fast/dom/reference-cycle-leaks.html > fast/dom/Document/document-write-recursion.html > js/dom/random-array-gc-stress.html > webanimations/leak-document-with-web-animation.html > svg/animations/smil-leak-elements.svg > svg/animations/smil-leak-element-instances-noBaseValRef.svg > svg/animations/smil-leak-element-instances.svg > editing/style/iframe-onload-crash-mac.html These tests don't appear to be relevant to the CLoop at all.
Mark Lam
Comment 6 2019-01-14 13:35:21 PST
Thanks for the review. Landed in r239940: <http://trac.webkit.org/r239940>.
Note You need to log in before you can comment on or make changes to this bug.